# Command-Line-Interface

./: .gitignore  CMakeLists.txt  README.md  main.cpp
header files/: Batch.h  CLI.h  Checker.h  Command.h  Date.h  Echo.h  Head.h  Parser.h  Prompt.h  Reader.h  Rm.h  Stream.h  Time.h  Touch.h  Tr.h  Truncate.h  Wc.h
source files/: Batch.cpp  CLI.cpp  Checker.cpp  Command.cpp  Date.cpp  Echo.cpp  Head.cpp  Parser.cpp  Prompt.cpp  Reader.cpp  Rm.cpp  Stream.cpp  Time.cpp  Touch.cpp  Tr.cpp  Truncate.cpp  Wc.cpp
